--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ h1, div {
   text-align: center;
 }
 
+h1 a {
+  text-decoration: none;
+  color: #555;
+}
+
 div {
   height: 250px;
   border: 5px solid black;
