--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ div:nth-of-type(13) {
 }
 
 div:nth-of-type(14) {
-  background-color: aqua;
+  background-color: pink;
 }
 
 div:nth-of-type(15) {
